--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title> Processamento de imagens em Canvas </title>
-	<!comment: MathJax para equações matemáticas em TeX>
+	<!-- MathJax para equações matemáticas em TeX -->
+	<link href="style2.css" rel="stylesheet"/>
 	<script type="text/javascript" async
 		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
 	</script>
