--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title> Processamento de imagens em Canvas </title>
+	Access-Control-Allow-Origin: *
 	<!-- MathJax para equações matemáticas em TeX -->
 	<link href="style2.css" rel="stylesheet"/>
 	<script type="text/javascript" async
